[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Nuclear Tower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Punk Kid/punk kid.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=3]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 250, 70 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.792157, 0.105882, 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 400, 100 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="GameScene" type="Spatial"]
script = ExtResource( 3 )

[node name="Nuclear Tower" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -16 )

[node name="Nuclear Tower2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, -12, 0, -16 )

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.307274, 0.951621, 0, -0.951621, 0.307274, 0, 16.2306, 5.90846 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 15, -25 )
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13, 30 )

[node name="Main" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="Main"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleControl" type="Node2D" parent="Main/Main"]
position = Vector2( 0, 180 )

[node name="Title" type="Label" parent="Main/Main/TitleControl"]
margin_left = 360.29
margin_top = 236.872
margin_right = 1268.29
margin_bottom = 349.872
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.839216, 0.00392157, 1 )
text = "RADIATION CLEANERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="Main/Main/TitleControl"]
margin_left = 360.957
margin_top = 244.214
margin_right = 1268.96
margin_bottom = 357.214
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.388235, 0.180392, 1 )
text = "RADIATION CLEANERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Main/Main/TitleControl"]
margin_left = 775.632
margin_top = 511.524
margin_right = 859.632
margin_bottom = 552.524
custom_fonts/font = SubResource( 5 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main/Main/TitleControl"]
margin_left = 775.632
margin_top = 631.461
margin_right = 859.632
margin_bottom = 672.461
custom_fonts/font = SubResource( 5 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTP" type="Button" parent="Main/Main/TitleControl"]
margin_left = 729.253
margin_top = 569.622
margin_right = 914.253
margin_bottom = 610.622
custom_fonts/font = SubResource( 5 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Help"]
margin_left = 520.0
margin_top = 417.0
margin_right = 1215.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 6 )
text = "How to play?

You use the WASD keys to move the player

Goal:
You must clean all the radiation in the map, by running over the green tiles, you can also get 
a power up to increase your speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Help"]
margin_left = 636.0
margin_top = 692.0
margin_right = 943.0
margin_bottom = 738.0
custom_fonts/font = SubResource( 7 )
text = "Back"
[connection signal="pressed" from="Main/Main/TitleControl/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Main/TitleControl/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Main/Main/TitleControl/HTP" to="." method="_on_HTP_pressed"]
[connection signal="pressed" from="Help/Button" to="." method="_on_Button_pressed"]
